# syntezator

./: Cargo.toml  index.html  style.css
.github/workflows/: cd.yml  ci.yml
src/: dom.rs  lib.rs  midi.rs  plotter.rs  synth.rs  wave.rs
src/assets/: test.mid
src/synth/: mod.rs  raw.rs  web_audio.rs
