[package]
name = "syntezator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.clippy]
assign_op_pattern = "allow"
too_many_arguments = "allow"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.28"
wasm-bindgen = "0.2.104"

[dependencies.web-sys]
version = "0.3.81"
features = [
    'AudioContext',
    'AudioParam',
    'AudioDestinationNode',
    'AudioBuffer',
    'AudioBufferSourceNode',
    'AudioNode',
    'Blob',
    'Document',
    'Element',
    'Event',
    'File',
    'FileList',
    'FileReader',
    'InputEvent',
    'EventTarget',
    'HtmlElement',
    'HtmlSourceElement',
    'HtmlAudioElement',
    'HtmlInputElement',
    'HtmlSelectElement',
    'Node',
    'OscillatorNode',
    'PeriodicWave',
    'AnalyserNode',
    'GainNode',
    'PeriodicWaveOptions',
    'Window',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d'
]
